# dsc-merger

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: application.rs  common.rs  dsc.rs  error.rs  interactive.rs  main.rs  merger.rs  opcodes.rs  subtitle.rs
src/gui/: components.rs  gui_logger.rs  mod.rs  renderer.rs  state.rs  utils.rs
src/logger/: mod.rs  simple_logger.rs
